# study_rospy_package

./: CMakeLists.txt  package.xml
action/: custom_action.action
action_service/: action_client.py  action_server.py
launch/: pub_subscriber.launch
msg/: costom_msg.msg
service/: client.py  server.py
srv/: custom_srv.srv
topic/: publisher.py  subscriber.py
